数式を追加

--- a/その他ノート.md
+++ b/その他ノート.md
@@ -181,7 +181,21 @@ document.referrer
 
 
 
+- 根元事象
+  - ただ一つの標本点からなり，分解できない事象
+- 複合事象
+  - 複数の標本点を含み，二つ以上の根元事象に分解可能な事象
 
+- 順列の組み合わせ
+    $${}_nP_r=\frac{n!}{(n-r)!}$$
+
+- 組み合わせの数
+    $${}_nC_r=\frac{n!}{(n-r)!}\frac{1}{r!}$$
+
+- スターリングの公式
+  - $n!$を近似するときに使われる。
+    $$\log_e{n!}\fallingdotseq(n+\frac{1}{2})\log_e{n}-n+\frac{1}{2}\log_e{2\pi}+...
+    $$
 
 
 
